[metadata]
description-file = README.md

[aliases]
test = nosetests

[nosetests]
exe = 1
where = grakel/tests
cover-html = 1
cover-html-dir = coverage
cover-package = grakel
detailed-errors = 1
with-doctest = 1
doctest-tests = 1
doctest-extension = rst
doctest-fixtures = _fixture
ignore-files = ^setup\.py$

[flake8]
max-line-length = 130
ignore = H306,E121,E123,E126,E741,E226,E24,E704,W503,W504

[egg_info]
tag_build = 
tag_date = 0

